# ONVIF-NVR

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  MACOS_TROUBLESHOOTING.md  README.md  docker-compose.yml  onvif-metadata.xml
.cargo/: config.toml
docker/: check-build.sh  init-db.sql  nginx.conf  startup.sh
front-end/: check_errors.cjs  check_errors.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
front-end/src/: App.css  App.jsx  application-layout.tsx  layout.tsx
front-end/src/components/: ProtectedRoute.jsx  link.tsx  live-stream-tile.tsx  loading-spinner.tsx  recording-control-button.tsx  spinner.tsx  text.tsx
front-end/src/components/playback/: HlsRecordingPlayer.tsx  RecordingPlayer.tsx  index.ts
front-end/src/contexts/: AuthContext.jsx
front-end/src/hooks/: useServer.js
front-end/src/pages/: cameras.tsx  discovery.tsx  forgot-password.tsx  live-view.tsx  login.tsx  playback.tsx  recording-schedules.tsx  recordings.tsx  register.tsx
front-end/src/services/: api.js
front-end/src/types/: camera.ts
metadata/: c6cf1ce5-f638-44cb-bf9b-3daa517e7178-metadata.xml
scripts/: setup-gst-env.sh
src/: error.rs  lib.rs  main.rs  stream_manager.rs  tutorial-common.rs
src/api/: mod.rs  rest.rs  webrtc.rs  websocket.rs  websocket_stream.rs
src/api/rest/: hls_controller.rs  nginx_vod_mapping.rs  recording_controller.rs  recording_playback_controller.rs  updated_hls_functions.rs
src/config/: mod.rs
src/db/: mod.rs
src/db/migrations/: mod.rs
src/db/migrations/sql/: 01_create_users_table.sql  02_create_cameras_table.sql  03_create_schedules_table.sql  04_create_recordings_table.sql  04_create_schedules_table.sql  05_create_events_table.sql  06_create_recordings_table.sql  06_create_streams_table.sql  07_create_camera_event_settings_model.sql  08_create_camera_stream_references.sql  add_event_based_to_schedules.sql  add_foreign_key_constraints.sql  add_indexes.sql  add_segment_fields.sql
src/db/models/: camera_models.rs  event_models.rs  event_settings_models.rs  mod.rs  recording_models.rs  recording_schedule_models.rs  stream_models.rs  user_models.rs
src/db/repositories/: camera_event_settings.rs  cameras.rs  events.rs  mod.rs  recordings.rs  schedules.rs  users.rs
src/device_manager/: discovery.rs  mod.rs  onvif_client.rs
src/examples/: macos_basic.rs  macos_rtsp.rs  rtsp_analytics.rs  rtsp_live_view.rs  rtsp_manager.rs  rtsp_service.rs  rtsp_stream.rs  rtsp_viewer.rs  simple_stream.rs  test_pattern.rs
src/messaging/: broker.rs  camera_events.rs  event.rs  mod.rs  tests.rs
src/recorder/: hls_preparer.rs  mod.rs  record.rs  scheduler.rs  storage_cleanup.rs
src/security/: auth.rs  mod.rs  password.rs
src/services/: analytics.rs  camera_manager.rs  mod.rs  recording.rs  streaming.rs
src/stream_manager/: mod.rs  stream_manager.rs
src/utils/: metadataparser.rs  mod.rs
