[package]
name = "g-streamer"
version = "0.1.0"
edition = "2024"

[dependencies]
gstreamer = "0.23.5"
gstreamer-app = "0.23.5"
gstreamer-video = "0.23.5"
uuid = { version = "1.3", features = ["v4", "serde"] }
tokio = { version = "1.28", features = ["full"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctrlc = "3.4"
rand = "0.8.5"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
tracing = "0.1.41"
bcrypt = "0.17.0"
toml = "0.8.20"

[[example]]
name = "simple_stream"
path = "src/examples/simple_stream.rs"

[[example]]
name = "rtsp_stream"
path = "src/examples/rtsp_stream.rs"

[[example]]
name = "rtsp_viewer"
path = "src/examples/rtsp_viewer.rs"

[[example]]
name = "rtsp_manager"
path = "src/examples/rtsp_manager.rs"

[[example]]
name = "rtsp_service"
path = "src/examples/rtsp_service.rs"

[[example]]
name = "rtsp_live_view"
path = "src/examples/rtsp_live_view.rs"

[[example]]
name = "rtsp_analytics"
path = "src/examples/rtsp_analytics.rs"

[[example]]
name = "macos_rtsp"
path = "src/examples/macos_rtsp.rs"

[[example]]
name = "test_pattern"
path = "src/examples/test_pattern.rs"

[[example]]
name = "macos_basic"
path = "src/examples/macos_basic.rs"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
objc = {version = "0.2.7", features = ["exception"]}
objc-foundation = "0.1.1"
