[package]
name = "g-streamer"
version = "0.1.0"
edition = "2021"

[dependencies]
gstreamer = "0.23.5"
gstreamer-app = "0.23.5"
gstreamer-video = "0.23.5"
gstreamer-pbutils = "0.23.5"
gstreamer-rtsp = "0.23.5"
glib = "0.18.5"
uuid = { version = "1.3", features = ["v4", "serde"] }
tokio = { version = "1.28", features = ["full"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yaserde = "0.7"
yaserde_derive = "0.7"
ctrlc = "3.4"
rand = "0.8.5"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json", "bigdecimal"] }
tracing = "0.1.41"
lapin = "2.3.1"  # RabbitMQ client library
deadpool-lapin = "0.11.0"  # Connection pool for RabbitMQ
deadpool = "0.10.0"  # Connection pool abstractions
bcrypt = "0.17.0"
toml = "0.8.20"
glob = "0.3.1"
onvif = { git = "https://github.com/lumeohq/onvif-rs" }
schema = { package = "schema", git = "https://github.com/lumeohq/onvif-rs" }
metadatastream = { package = "metadatastream", git = "https://github.com/lumeohq/onvif-rs" }
devicemgmt = { package = "devicemgmt", git = "https://github.com/lumeohq/onvif-rs" }
media = { package = "media", git = "https://github.com/lumeohq/onvif-rs" }
transport = { package = "transport", git = "https://github.com/lumeohq/onvif-rs" }
futures = "0.3"
futures-util = "0.3"
axum = { version = "0.6", features = ["ws"] }
axum-extra = "0.7"
tower-http = { version = "0.4", features = ["cors", "auth", "fs"] }
url = "2.5.4"
webrtc = "0.12.0"
jsonwebtoken = "9.3.1"
regex = "1.10.4"
gstreamer-audio = "0.23.5"
once_cell = "1.21.3"
tokio-util = "0.7.15"
async-global-executor = "=3.0.0"

[[example]]
name = "simple_stream"
path = "src/examples/simple_stream.rs"

[[example]]
name = "rtsp_stream"
path = "src/examples/rtsp_stream.rs"

[[example]]
name = "rtsp_viewer"
path = "src/examples/rtsp_viewer.rs"

[[example]]
name = "rtsp_manager"
path = "src/examples/rtsp_manager.rs"

[[example]]
name = "rtsp_service"
path = "src/examples/rtsp_service.rs"

[[example]]
name = "rtsp_live_view"
path = "src/examples/rtsp_live_view.rs"

[[example]]
name = "rtsp_analytics"
path = "src/examples/rtsp_analytics.rs"

[[example]]
name = "macos_rtsp"
path = "src/examples/macos_rtsp.rs"

[[example]]
name = "test_pattern"
path = "src/examples/test_pattern.rs"

[[example]]
name = "macos_basic"
path = "src/examples/macos_basic.rs"

[[example]]
name = "event_listener"
path = "src/examples/event_listener.rs"

[[example]]
name = "event_publisher"
path = "src/examples/event_publisher.rs"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
objc = {version = "0.2.7", features = ["exception"]}
objc-foundation = "0.1.1"
